# medh5

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_PLAN.md  RELEASE_PROGRESS.md  cli.md  converters.md  dataset-and-stats.md  file-format.md  getting-started.md  index.md  python-api.md  pytorch.md  review.md
medh5/: __init__.py  _shared.py  chunks.py  cli.py  core.py  exceptions.py  integrity.py  meta.py  review.py  sampling.py  stats.py  torch.py  transforms.py
medh5/cli/: __init__.py  __main__.py  _common.py  convert.py  dataset.py  inspect.py  review.py
medh5/dataset/: __init__.py  index.py  split.py
medh5/io/: __init__.py  dicom.py  nifti.py  nnunetv2.py
mlh5/: __init__.py  core.py  meta.py
tests/: test_bbox_validation.py  test_chunks.py  test_cli.py  test_dataset.py  test_integrity.py  test_io.py  test_meta.py  test_partial.py  test_review.py  test_roundtrip.py  test_sampling.py  test_shared.py  test_split.py  test_stats.py  test_torch.py  test_transforms.py  test_update.py  test_validate.py
