[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlh5"
version = "0.1.0"
description = "Thin HDF5 + Blosc2 multi-array format for ML workloads (image + segmentation + bboxes + label in one file)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "h5py>=3.8",
  "hdf5plugin>=4.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlh5*"]
