[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medh5"
version = "0.5.0"
description = "HDF5 + Blosc2 single-file format for medical-imaging ML workloads (multi-modality images + segmentation + bboxes + label)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Puyang Wang", email = "pauliwang411@gmail.com" },
]
keywords = [
  "medical imaging",
  "hdf5",
  "blosc2",
  "machine learning",
  "segmentation",
  "nifti",
  "dicom",
  "pytorch",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Typing :: Typed",
]
dependencies = [
  "h5py>=3.10",
  "hdf5plugin>=4.1",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.0",
  "build>=1.0",
  "twine>=5.0",
]
torch = [
  "torch>=2.0",
]
nifti = [
  "nibabel>=5",
]
dicom = [
  "pydicom>=2.4",
]
itk = [
  "SimpleITK>=2.3",
]

[project.urls]
Homepage = "https://github.com/XwK-P/medh5"
Repository = "https://github.com/XwK-P/medh5"
Issues = "https://github.com/XwK-P/medh5/issues"
Changelog = "https://github.com/XwK-P/medh5/blob/main/CHANGELOG.md"

[project.scripts]
medh5 = "medh5.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medh5*"]

[tool.setuptools.package-data]
medh5 = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov=medh5 --cov-report=term-missing"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "h5py",
  "h5py.*",
  "hdf5plugin",
  "hdf5plugin.*",
  "torch",
  "torch.*",
  "nibabel",
  "nibabel.*",
  "pydicom",
  "pydicom.*",
  "SimpleITK",
  "SimpleITK.*",
]
ignore_missing_imports = true
follow_imports = "skip"
